--- a/iManager/app/src/main/res/menu/menu_weather.xml
+++ b/iManager/app/src/main/res/menu/menu_weather.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ziniuyimeixiang.imanager.Weather">
     <item
-        android:id="@+id/action_weather_location_search"
-        android:enabled="true"
-        android:icon="@android:drawable/ic_menu_search"
+        android:id="@+id/app_location_search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="100"
-        android:title="@string/action_search_location"
-        android:visible="true"
-        app:showAsAction="ifRoom" />
+        android:title="Search"
+        app:showAsAction="always" />
+
 </menu>
