--- a/iManager/app/src/main/res/layout/content_weather.xml
+++ b/iManager/app/src/main/res/layout/content_weather.xml
@@ -5,8 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:id="@+id/weatherConstraintLayout"
     tools:context="com.ziniuyimeixiang.imanager.Weather"
-    tools:showIn="@layout/activity_weather">
+    tools:showIn="@layout/activity_weather"
+    android:background="@drawable/snow"
+    >
 
     <!-- TODO need to change text waterloo to other -->
 
