--- a/iManager/app/src/main/res/layout/activity_wearing.xml
+++ b/iManager/app/src/main/res/layout/activity_wearing.xml
@@ -4,65 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ziniuyimeixiang.imanager.WearingActivity">
+    tools:context="com.ziniuyimeixiang.imanager.ClothActivity"
+    >
 
-    <TextView
-        android:id="@+id/upperBodyText"
-        android:layout_width="157dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="100dp"
-        android:text="Upper Body :"
-        android:textSize="25sp"
+    <FrameLayout
+        android:id="@+id/clothFrame"
+        android:layout_width="0dp"
+        android:layout_height="500dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/lowerBodyText"
-        android:layout_width="157dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="76dp"
-        android:text="Lower Body :"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/upperBodyText"
-        app:layout_constraintTop_toBottomOf="@+id/upperBodyText" />
-
-    <TextView
-        android:id="@+id/upperBodySuggestionText"
-        android:layout_width="157dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:textSize="25sp"
-        android:text="upper"
-        app:layout_constraintBottom_toBottomOf="@+id/upperBodyText"
-        app:layout_constraintStart_toEndOf="@+id/upperBodyText"
-        app:layout_constraintTop_toTopOf="@+id/upperBodyText" />
-
-    <TextView
-        android:id="@+id/lowerBodySuggestionText"
-        android:layout_width="157dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:textSize="25sp"
-        android:text="Lower"
-        app:layout_constraintBottom_toBottomOf="@+id/lowerBodyText"
-        app:layout_constraintStart_toEndOf="@+id/lowerBodyText"
-        app:layout_constraintTop_toTopOf="@+id/lowerBodyText" />
+    </FrameLayout>
 
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="49dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="64dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
+        android:scaleType="center"
         app:backgroundTint="@color/lightBlueColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_action_name"
-        android:scaleType="center"
-        />
+        app:srcCompat="@drawable/ic_action_name" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/weatherFloatingButton"
@@ -91,6 +58,20 @@
         app:layout_constraintBottom_toTopOf="@+id/weatherFloatingButton"
         app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
         app:srcCompat="@drawable/home_icon" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/clothNav"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clothFrame"
+        app:layout_constraintVertical_bias="1.0"
+        app:menu="@menu/cloth_nav_menu">
+
+    </android.support.design.widget.BottomNavigationView>
 
 
 </android.support.constraint.ConstraintLayout>
