--- a/iManager/app/src/main/res/layout/content_weather.xml
+++ b/iManager/app/src/main/res/layout/content_weather.xml
@@ -177,7 +177,6 @@
                     android:id="@+id/currentTempValue"
                     android:layout_width="42dp"
                     android:layout_height="22dp"
-                    android:layout_marginStart="16dp"
                     android:fontFamily="@font/bradhitc"
                     android:gravity="center"
                     android:text="-12°C"
@@ -187,13 +186,13 @@
 
                 <TextView
                     android:id="@+id/highLowTempValue"
-                    android:layout_width="48dp"
-                    android:layout_height="16dp"
+                    android:layout_width="79dp"
+                    android:layout_height="18dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/bradhitc"
-                    android:text="-12°C-12°C"
+                    android:text="（-12°C-12°C）"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="@+id/currentTempValue"
                     app:layout_constraintEnd_toEndOf="@+id/hardcodeTemperatureTextText"
