--- a/iManager/app/src/main/res/layout/fragment_male_cloth.xml
+++ b/iManager/app/src/main/res/layout/fragment_male_cloth.xml
@@ -2,14 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ziniuyimeixiang.imanager.MaleClothFragment"
-    android:background="@color/colorPrimary">
+    tools:context="com.ziniuyimeixiang.imanager.MaleClothFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textSize="50dp"/>
 
 </FrameLayout>
