--- a/iManager/app/src/main/res/values/colors.xml
+++ b/iManager/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#5DADE2</color>
     <color name="colorPrimaryDark">#3498DB</color>
+    <color name="colorPrimaryLight">#84c3ed</color>
     <color name="colorAccent">#ff4081</color>
     <color name="lightBlueColor">#7daaf2</color>
     <color name="normalBlueColor">#5792f2</color>
