--- a/iManager/app/src/main/res/values/colors.xml
+++ b/iManager/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="lightBlueColor">#7daaf2</color>
     <color name="normalBlueColor">#5792f2</color>
     <color name="littleDarkBlueColor">#337df4</color>
+    <color name="white">#ffffff</color>
 </resources>
