--- a/iManager/app/src/main/res/layout/activity_wearing.xml
+++ b/iManager/app/src/main/res/layout/activity_wearing.xml
@@ -94,8 +94,29 @@
                 app:layout_constraintTop_toTopOf="parent">
 
             </FrameLayout>
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
+
+            <GridView
+                android:id="@+id/photoGridLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="auto_fit"
+                />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="60dp" />
+
         </LinearLayout>
+
+
     </ScrollView>
+
 
 
 </android.support.constraint.ConstraintLayout>
