--- a/iManager/app/src/main/res/layout/activity_main.xml
+++ b/iManager/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         android:onClick="weatherBottonClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -23,12 +22,13 @@
 
     <TextView
         android:id="@+id/locationOnWeatherButton"
-        android:layout_width="162dp"
+        android:layout_width="284dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="location"
+        android:gravity="center"
+        android:text="Location"
         android:textSize="25dp"
         app:layout_constraintEnd_toStartOf="@+id/tempOnWeatherButton"
         app:layout_constraintHorizontal_bias="0.356"
@@ -43,12 +43,13 @@
         android:text="Temp"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/locationOnWeatherButton" />
+        app:layout_constraintTop_toTopOf="@+id/locationOnWeatherButton"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/weatherInfoOnWeatherButton"
-        android:layout_width="260dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="61dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -60,7 +61,8 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/imageButton"
         app:layout_constraintTop_toBottomOf="@+id/locationOnWeatherButton"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintVertical_bias="0.35"
+        android:gravity="center"/>
 
     <ImageButton
         android:id="@+id/imageButton2"
