--- a/iManager/app/src/main/res/layout/activity_main.xml
+++ b/iManager/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="Location"
+        android:text="Beijing, Beijing"
         android:textSize="25dp"
         app:layout_constraintEnd_toStartOf="@+id/tempOnWeatherButton"
         app:layout_constraintHorizontal_bias="0.356"
         app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/imageButton" />
+        app:layout_constraintTop_toTopOf="@+id/imageButton"
+        android:fontFamily="@font/segoepr"/>
 
     <TextView
         android:id="@+id/tempOnWeatherButton"
@@ -42,11 +43,12 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="12dp"
         android:gravity="center"
-        android:text="Temp"
+        android:text="-12°C"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/locationOnWeatherButton"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/locationOnWeatherButton" />
+        app:layout_constraintTop_toTopOf="@+id/locationOnWeatherButton"
+        android:fontFamily="@font/segoepr"/>
 
     <TextView
         android:id="@+id/weatherInfoOnWeatherButton"
@@ -64,7 +66,8 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/imageButton"
         app:layout_constraintTop_toBottomOf="@+id/locationOnWeatherButton"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintVertical_bias="0.35"
+        android:fontFamily="@font/segoepr"/>
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -75,7 +78,8 @@
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:srcCompat="@drawable/banner_calendar" />
+        app:srcCompat="@drawable/banner_calendar"
+        />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -104,7 +108,9 @@
         app:layout_constraintHorizontal_bias="0.267"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageButton2"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.088"
+        android:gravity="center"
+        android:fontFamily="@font/segoepr"/>
 
     <TextView
         android:id="@+id/start_t"
@@ -117,7 +123,9 @@
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_t" />
+        app:layout_constraintTop_toBottomOf="@+id/event_t"
+        android:gravity="center"
+        android:fontFamily="@font/segoepr"/>
 
     <TextView
         android:id="@+id/location_t"
@@ -133,7 +141,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.296"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_t" />
+        app:layout_constraintTop_toBottomOf="@+id/start_t"
+        android:gravity="center"
+        android:fontFamily="@font/segoepr"/>
 
     <TextView
         android:id="@+id/route_t"
@@ -150,6 +160,7 @@
         app:layout_constraintHorizontal_bias="0.224"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageButton3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:fontFamily="@font/segoepr"/>
 
 </android.support.constraint.ConstraintLayout>
