--- a/iManager/app/src/main/res/layout/activity_main.xml
+++ b/iManager/app/src/main/res/layout/activity_main.xml
@@ -147,20 +147,20 @@
 
     <TextView
         android:id="@+id/route_t"
-        android:layout_width="194dp"
+        android:layout_width="212dp"
         android:layout_height="132dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/segoepr"
         android:text="TextView"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.224"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageButton3"
-        app:layout_constraintVertical_bias="0.0"
-        android:fontFamily="@font/segoepr"/>
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
